# obsidian-cli

./: LICENSE.txt  README.md  pyproject.toml
src/obsidian_cli/: __init__.py  obsidian.py  vault_templates.py
src/obsidian_cli/cli/: __main__.py  autocomplete.py  templates.py
